<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/fragment_open_ticket_camera_permission_camera_icon"
        android:layout_width="@dimen/default_dimen_100dp"
        android:layout_height="@dimen/default_dimen_100dp"
        android:layout_marginTop="@dimen/default_dimen_150dp"
        android:src="@drawable/camera_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/fragment_open_ticket_camera_permission_title"
        android:layout_width="@dimen/default_dimen_0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_dimen_20sp"
        android:layout_marginTop="@dimen/default_dimen_20dp"
        android:layout_marginStart="@dimen/default_dimen_20dp"
        android:layout_marginEnd="@dimen/default_dimen_20dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/open_ticket_camera_permission_title"
        app:layout_constraintTop_toBottomOf="@id/fragment_open_ticket_camera_permission_camera_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/fragment_open_ticket_camera_permission_subtitle"
        android:layout_width="@dimen/default_dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_10dp"
        android:layout_marginStart="@dimen/default_dimen_50dp"
        android:layout_marginEnd="@dimen/default_dimen_50dp"
        android:textAlignment="center"
        android:text="@string/open_ticket_camera_permission_subtitle"
        app:layout_constraintTop_toBottomOf="@id/fragment_open_ticket_camera_permission_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_open_ticket_camera_permission_card_view"
        android:layout_width="@dimen/default_dimen_0dp"
        android:layout_height="@dimen/default_dimen_50dp"
        android:layout_marginTop="@dimen/default_dimen_20dp"
        android:layout_marginStart="@dimen/default_dimen_20dp"
        android:layout_marginEnd="@dimen/default_dimen_20dp"
        app:cardElevation="@dimen/default_dimen_0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_open_ticket_camera_permission_subtitle"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_link"
                android:textSize="@dimen/default_dimen_16sp"
                android:text="@string/open_ticket_camera_permission_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_open_ticket_camera_permission_back_card_view"
        android:layout_width="@dimen/default_dimen_0dp"
        android:layout_height="@dimen/default_dimen_50dp"
        android:layout_marginStart="@dimen/default_dimen_20dp"
        android:layout_marginEnd="@dimen/default_dimen_20dp"
        android:layout_marginBottom="@dimen/default_dimen_20dp"
        android:text="@string/login_button_name"
        android:textAllCaps="false"
        android:backgroundTint="@color/green_dark"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/activity_login_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to_home_button"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>