<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/fragment_open_ticket_tutorial_toolbar"
        layout="@layout/custom_app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/fragment_open_ticket_tutorial_title"
        android:layout_width="@dimen/default_dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_80dp"
        android:textSize="@dimen/default_dimen_22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/open_ticket_tutorial_title"
        app:layout_constraintTop_toBottomOf="@id/fragment_open_ticket_tutorial_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/fragment_open_ticket_tutorial_icon"
        android:layout_width="@dimen/default_dimen_100dp"
        android:layout_height="@dimen/default_dimen_100dp"
        android:layout_marginTop="@dimen/default_dimen_50dp"
        android:src="@drawable/qr_code_icon"
        app:layout_constraintTop_toBottomOf="@id/fragment_open_ticket_tutorial_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/fragment_open_ticket_tutorial_explanation"
        android:layout_width="@dimen/default_dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_50dp"
        android:layout_marginStart="@dimen/default_dimen_20dp"
        android:layout_marginEnd="@dimen/default_dimen_20dp"
        android:textColor="@color/black"
        android:text="@string/open_ticket_tutorial_explanation"
        app:layout_constraintTop_toBottomOf="@id/fragment_open_ticket_tutorial_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_open_ticket_tutorial_card_view"
        android:layout_width="@dimen/default_dimen_0dp"
        android:layout_height="@dimen/default_dimen_50dp"
        android:layout_marginStart="@dimen/default_dimen_20dp"
        android:layout_marginEnd="@dimen/default_dimen_20dp"
        android:layout_marginBottom="@dimen/default_dimen_20dp"
        android:text="@string/login_button_name"
        android:textAllCaps="false"
        android:backgroundTint="@color/green_dark"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_open_ticket_tutorial_card_view_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/activity_login_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_ticket_tutorial_button_label"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="@id/fragment_open_ticket_tutorial_card_view_layout"
                app:layout_constraintEnd_toEndOf="@id/fragment_open_ticket_tutorial_card_view_layout"
                app:layout_constraintBottom_toBottomOf="@id/fragment_open_ticket_tutorial_card_view_layout"
                app:layout_constraintStart_toStartOf="@id/fragment_open_ticket_tutorial_card_view_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>