<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ErrorActivity">

    <ImageView
        android:id="@+id/activity_error_icon"
        android:layout_width="@dimen/default_dimen_126dp"
        android:layout_height="@dimen/default_dimen_126dp"
        android:src="@drawable/alert_icon"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_error_title"/>

    <TextView
        android:id="@+id/activity_error_title"
        android:layout_width="@dimen/default_dimen_0dp"
        android:layout_height="wrap_content"
        android:text="@string/internal_error"
        android:textSize="@dimen/default_dimen_22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/default_dimen_25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_error_icon"
        app:layout_constraintBottom_toTopOf="@+id/activity_error_description"/>

    <TextView
        android:id="@+id/activity_error_description"
        android:layout_width="@dimen/default_dimen_0dp"
        android:layout_height="wrap_content"
        android:text="@string/ticket_error_result_description"
        android:textSize="@dimen/default_dimen_16sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/default_dimen_5dp"
        android:layout_marginStart="@dimen/default_dimen_10dp"
        android:layout_marginEnd="@dimen/default_dimen_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_error_title"
        app:layout_constraintBottom_toTopOf="@id/activity_error_try_again_button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/activity_error_try_again_button"
        android:layout_width="@dimen/default_dimen_0dp"
        android:layout_height="@dimen/default_dimen_45dp"
        android:layout_marginStart="@dimen/default_dimen_50dp"
        android:layout_marginTop="@dimen/default_dimen_50dp"
        android:layout_marginEnd="@dimen/default_dimen_50dp"
        android:layout_marginBottom="@dimen/default_dimen_50dp"
        android:backgroundTint="@color/green_dark"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_error_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="@dimen/default_dimen_0dp"
                android:layout_height="wrap_content"
                android:text="@string/ticket_error_result_button_text"
                android:textColor="@color/white"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>