<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.LoginActivity">

        <ImageView
            android:id="@+id/activity_login_header_background"
            android:layout_width="@dimen/default_dimen_0dp"
            android:layout_height="@dimen/default_dimen_150dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/login_header_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:layout_width="@dimen/default_dimen_126dp"
            android:layout_height="@dimen/default_dimen_69dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/glpi_logo"
            app:layout_constraintTop_toTopOf="@id/activity_login_header_background"
            app:layout_constraintStart_toStartOf="@id/activity_login_header_background"
            app:layout_constraintEnd_toEndOf="@id/activity_login_header_background"
            app:layout_constraintBottom_toBottomOf="@id/activity_login_header_background" />

        <TextView
            android:id="@+id/activity_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_dimen_25sp"
            android:text="@string/login_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/default_dimen_80dp"
            android:layout_marginStart="@dimen/default_dimen_28dp"
            app:layout_constraintTop_toBottomOf="@id/activity_login_header_background"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/activity_login_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_dimen_20sp"
            android:text="@string/login_subtitle"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/default_dimen_13dp"
            android:layout_marginStart="@dimen/default_dimen_28dp"
            app:layout_constraintTop_toBottomOf="@id/activity_login_title"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_username_input"
            android:layout_width="@dimen/default_dimen_0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/login_username_field_hint"
            android:layout_marginTop="@dimen/default_dimen_40dp"
            android:layout_marginStart="@dimen/default_dimen_28dp"
            android:layout_marginEnd="@dimen/default_dimen_28dp"
            app:layout_constraintTop_toBottomOf="@id/activity_login_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_password_input"
            android:layout_width="@dimen/default_dimen_0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/login_password_field_hint"
            android:layout_marginTop="@dimen/default_dimen_20dp"
            app:layout_constraintTop_toBottomOf="@id/activity_login_username_input"
            app:layout_constraintStart_toStartOf="@id/activity_login_username_input"
            app:layout_constraintEnd_toEndOf="@id/activity_login_username_input"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/activity_login_button"
            android:layout_width="@dimen/default_dimen_0dp"
            android:layout_height="@dimen/default_dimen_50dp"
            android:text="@string/login_button_name"
            android:layout_marginTop="@dimen/default_dimen_50dp"
            android:textAllCaps="false"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/default_dimen_8dp"
            android:backgroundTint="@color/green_dark"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintTop_toBottomOf="@id/activity_login_password_input"
            android:layout_marginBottom="@dimen/default_dimen_28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/activity_login_password_input"
            app:layout_constraintEnd_toEndOf="@id/activity_login_password_input">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_login_card_view_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/activity_login_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_dimen_16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@id/activity_login_card_view_layout"
                    app:layout_constraintEnd_toEndOf="@id/activity_login_card_view_layout"
                    app:layout_constraintBottom_toBottomOf="@id/activity_login_card_view_layout"
                    app:layout_constraintStart_toStartOf="@id/activity_login_card_view_layout" />

                <ProgressBar
                    android:id="@+id/activity_login_progress_bar_button"
                    android:layout_width="@dimen/default_dimen_30dp"
                    android:layout_height="@dimen/default_dimen_30dp"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="@id/activity_login_card_view_layout"
                    app:layout_constraintEnd_toEndOf="@id/activity_login_card_view_layout"
                    app:layout_constraintBottom_toBottomOf="@id/activity_login_card_view_layout"
                    app:layout_constraintStart_toStartOf="@id/activity_login_card_view_layout" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>